Cross out stdout/stderr filtering options for now

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -69,9 +69,9 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 - `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续按顺序应用其他的匹配规则
     - **注意：** 该选项仅适用于匹配规则所在文件中的其他规则，其他文件中的规则将不受影响
     - 使用`noendmatchhere`以取消设定
-- `subststdoutonly`：仅匹配standard output的输出内容
-- `subststderronly`：仅匹配standard error的输出内容
-- `substallstreams`：默认设定；用于重置之前设定；匹配所有内容
+- ~~`subststdoutonly`：仅匹配standard output的输出内容~~
+- ~~`subststderronly`：仅匹配standard error的输出内容~~
+- ~~`substallstreams`：默认设定；用于重置之前设定；匹配所有内容~~
 - `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
     - 使用`noforegroundonly`以取消设定该选项
     - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
