Fix CLItheme renaming

--- a/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
+++ b/应用程序和字符串定义API/应用程序适配/3. 使用frontend模块.md
@@ -1,4 +1,4 @@
-# 使用clitheme的frontend模块
+# 使用CLItheme的frontend模块
 
 为了帮助开发者更方便的添加CLItheme的适配，本项目提供了一个frontend模块。这个模块包含了抓取当前主题中字符串的功能；只需要调用一个函数就可以了。除此之外，frontend还包括了其他的功能，比如检查当前的主题有没有适配请求的字符串。
 
