--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -71,12 +71,14 @@
 
 以下选项中可以使用`no<选项名称>`禁用该选项设定，比如`nosubstesc`。
 
-- `substesc`：将内容中的`{{ESC}}`替换为终端ESC（ASCII Escape）字符（`\x1b`）
-    - **该选项仅适用于这些地方：**`header`段落中的`description`定义；`substrules`段落中的匹配和替换内容；`entries`中的字符串定义内容
-    - 当该选项在`[/subst_string]`或`[/subst_regex]`语句后指定，会应用在匹配内容上
 - `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](./内容变量.md)）
     - 当该选项在`[/subst_string]`或`[/subst_regex]`语句后指定，会应用在匹配内容上
     - 当该选项在`[/entry]`语句后指定，会应用在路径名称上
+- `substesc`：将内容中的`{{ESC}}`替换为终端ESC（ASCII Escape）字符（`\x1b`）
+    - **该选项仅适用于这些地方：**`header`段落中的`description`定义；`substrules`段落中的匹配和替换内容；`entries`中的字符串定义内容
+    - 当该选项在`[/subst_string]`或`[/subst_regex]`语句后指定，会应用在匹配内容上
+- `substchar`：使用字符编码输入特殊字符；支持`{{[xXX]}}`、`{{uXXXX}}`、和`{{UXXXXXXXX}}`格式（和Python字符串相似）
+    - 该选项仅适用于支持`substesc`的地方
 
 ### 命令行输出替换
 
