Add `linebounds` to documentation

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -59,19 +59,32 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     - 替换内容可以是多行的；详见[多行内容段落](../附录：主题定义文件通用语法/多行内容段落.md)
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
     - 注意：不能同时指定多个系统语言，但是支持在此语法中使用变量替换（`substvar`；详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)），如`locale:{{some_var}}`会把`{{some_var}}`替换成对应变量的内容，并且在变量的内容中可以通过空格指定多个系统语言。
-- 如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。你可以使用`clitheme-exec --showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[subst_regex]`）。**
+- **如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[subst_regex]`）。**
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
 ### 可以设定的选项
 
 你可以为匹配规则设定一些选项。如需设定，请在`[/subst_string]`或`[/subst_regex]`之后添加选项设定，或使用`set_options`为之后定义的匹配规则应用这些选项设定。
 
-- `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续按顺序应用其他的匹配规则
+- `endmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续按顺序应用其他的匹配规则
     - **注意：** 该选项仅适用于匹配规则所在文件中的其他规则，其他文件中的规则将不受影响
     - 使用`noendmatchhere`以取消设定
 - ~~`subststdoutonly`：仅匹配standard output的输出内容~~
 - ~~`subststderronly`：仅匹配standard error的输出内容~~
 - ~~`substallstreams`：默认设定；用于重置之前设定；匹配所有内容~~
+- `linebounds`：支持在替换规则内容中指定行边界，以在开端和末尾中插入空格。如需使用，请启用该选项并在对应的内容的开头和末尾添加`|`字符。
+    - 该选项启用后，所有以`|`字符开头的内容必须在末尾插入相同字符，否则会提示语法错误
+    - 使用`nolinebounds`取消设定
+
+```plaintext
+set_options linebounds
+# 内容："Line content  "
+[subst_regex] |Line content  |
+    # 内容："  Replace content|new content "
+    locale:default |  Replace content|new content |
+[/subst_regex]
+```
+
 - `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
     - 使用`noforegroundonly`以取消设定该选项
     - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
@@ -152,7 +165,7 @@ bash-3.2$
 
 ## 限制匹配规则适用的命令
 
-为了防止一个匹配规则在另一个无关的命令样应用程序被应用，你可以为匹配规则限制适用的命令。如需添加命令限制，请在匹配规则前面添加`[filter_commands]`段落。
+为了防止一个匹配规则在另一个无关的应用程序被应用，你可以为匹配规则限制适用的命令。如需添加命令限制，请在匹配规则前面添加`[filter_commands]`段落。
 
 ```plaintext
 {substrules_section}
