--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -79,6 +79,17 @@
     - 当该选项在`[/subst_string]`或`[/subst_regex]`语句后指定，会应用在匹配内容上
 - `substchar`：使用字符编码输入特殊字符；支持`{{[xXX]}}`、`{{uXXXX}}`、和`{{UXXXXXXXX}}`格式（和Python字符串相似）
     - 该选项仅适用于支持`substesc`的地方
+- `linebounds`：支持在部分内容中指定行边界，以在开端和末尾中插入空格。如需使用，请启用该选项并在对应的内容的开头和末尾添加`|`字符。
+    - 该选项启用后，所有以`|`字符开头的内容必须在末尾插入相同字符，否则会提示语法错误
+
+```plaintext
+set_options linebounds
+# 内容："Line content  "
+[subst_regex] |Line content  |
+    # 内容："  Replace content|new content "
+    locale:default |  Replace content|new content |
+[/subst_regex]
+```
 
 ### 命令行输出替换
 
