Refactor options description

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -62,45 +62,19 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 - **如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[subst_regex]`）。**
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
+### 注意事项
+
+- 主题定义文件中的匹配规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
+    - **这意味着你可以通过多个替换规则来更改/替换一行的输出**
+- 如果执行替换规则的时间超过**0.4秒**，则会视为超时，并且会输出未处理过的内容
+- 不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容
+- 如果匹配规则的匹配文本/表达式、命令限制条件、和stdout/stderr限制设定于之前的规则相同，将被视为重复规则，并且新的定义会覆盖旧的
+
 ### 可以设定的选项
 
 你可以为匹配规则设定一些选项。如需设定，请在`[/subst_string]`或`[/subst_regex]`之后添加选项设定，或使用`set_options`为之后定义的匹配规则应用这些选项设定。
 
-- `endmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续按顺序应用其他的匹配规则
-    - **注意：** 该选项仅适用于匹配规则所在文件中的其他规则，其他文件中的规则将不受影响
-    - 使用`noendmatchhere`以取消设定
-- ~~`subststdoutonly`：仅匹配standard output的输出内容~~
-- ~~`subststderronly`：仅匹配standard error的输出内容~~
-- ~~`substallstreams`：默认设定；用于重置之前设定；匹配所有内容~~
-- `linebounds`：支持在替换规则内容中指定行边界，以在开端和末尾中插入空格。如需使用，请启用该选项并在对应的内容的开头和末尾添加`|`字符。
-    - 该选项启用后，所有以`|`字符开头的内容必须在末尾插入相同字符，否则会提示语法错误
-    - 使用`nolinebounds`取消设定
-
-```plaintext
-set_options linebounds
-# 内容："Line content  "
-[subst_regex] |Line content  |
-    # 内容："  Replace content|new content "
-    locale:default |  Replace content|new content |
-[/subst_regex]
-```
-
-- `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
-    - 使用`noforegroundonly`以取消设定该选项
-    - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
-    - **注意：** 经测试，只有shell等应用程序会在执行其他命令时修改自己的前台状态；`sudo`等程序不会（除非通过`sudo`执行shell，如`sudo bash`）。
-    - **注意：** 大多数shell程序（`bash`、`zsh`、`csh`、`fish`）的命令执行错误提示（如`command not found`、`permission denied`等）会通过创建的另一个进程输出，并且shell会在后台运行。这会导致带有该选项的命令限制规则和对应的替换规则在这些提示输出上不会被应用：
-
-```plaintext
-$ clitheme-exec --foreground-stat bash
-bash-3.2$ wef
-! Foreground: False
-bash: wef: command not found
-! Foreground: True
-bash-3.2$
-```
-
-更多信息以及可以设定的选项请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)。
+请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)。
 
 ### 同时指定多个匹配表达式
 
@@ -199,15 +173,9 @@ bash-3.2$
 
 比如说，用户输入的`rm something -rf`指令会匹配限制条件中的`rm -rf`规则，但不会匹配到`something -rf rm`（因为第一个语句不同）和`rm -f`（因为原命令中不包括`-f`）。
 
-你可以选择其他的匹配机制；只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）加上它们，以把它应用到之后所有的命令限制规则定义。请注意，`filter_command <命令>`语法只能通过`set_options`设定这些选项。
+你可以选择[其他的匹配机制和选项](../附录：主题定义文件通用语法/可以设定的选项.md#命令限制规则)；只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`加上它们，以把它应用到之后所有的命令限制规则定义。请注意，`filter_command <命令>`语法只能通过`set_options`设定这些选项。
 
-- `strictcmdmatch`：用户输入的命令必须开始于限制条件命令，按语句计算。比如说，用户输入的`example-app something -e`会匹配到限制规则中的`example-app something`，但不会匹配到`example-app -e`（因为`example-app something -e`不以`example-app -e`开始）。
-- `exactcmdmatch`：用户输入的命令必须与限制条件命令完全相同
-- `smartcmdmatch`：和默认匹配机制相似，但是所有命令中单个横杠（`-`）开头的语句会被拆分成单个选项，如`ls -lih`将会被视为`ls -l -i -h`。带有多个横杠（`--`）的语句不受影响。
-- `normalcmdmatch`：默认匹配机制；**用于重置/取消设定之前的设置**
-- `foregroundonly`：你也可以在限制条件中指定该选项，以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
-
-**注意：** 无论选择了哪个匹配选项，如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
+**注意：** 在非正则表达式命令规则中，如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
 
 #### 样例：
 
@@ -228,11 +196,3 @@ set_options normalcmdmatch
 ## 应用主题（`clitheme apply-theme`）
 
 主题定义文件写好后，你需要应用这个文件到系统中。请在终端执行`clitheme apply-theme <文件名>`以应用主题。应用好主题后，请使用`clitheme-exec`来使用这些匹配规则。详见[使用clitheme-exec](2.%20使用clitheme-exec.md)。
-
-## 注意事项
-
-- 主题定义文件中的匹配规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
-    - **这意味着你可以通过多个替换规则来更改/替换一行的输出**
-- 如果执行替换规则的时间超过**0.4秒**，则会视为超时，并且会输出未处理过的内容
-- 不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容
-- 如果匹配规则的匹配文本/表达式、命令限制条件、和stdout/stderr限制设定于之前的规则相同，将被视为重复规则，并且新的定义会覆盖旧的
