--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -12,17 +12,17 @@
 {substrules_section}
     # substesc和endmatchhere选项会对以下所有的匹配规则生效
     set_options endmatchhere substesc
-    [subst_string] Some text
+    [subst_string] |Some text|
         [locale] default
             Some other text here
             Good stuff {{ESC}}
         [/locale]
-    [/subst_string] subststderronly
+    [/subst_string] linebounds
     [subst_string] Some other text
         [locale] default
             Another good stuff
         [/locale]
-    [/subst_string] noendmatchhere subststdoutonly
+    [/subst_string] noendmatchhere foregroundonly
     # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
     [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
         # 如果想对以下内容设定选项，需要使用多行内容段落
@@ -69,14 +69,12 @@
 
 ### 内容替换
 
-以下选项中可以使用`no<选项名称>`禁用该选项设定，比如`nosubstesc`。
+以下选项适用于定义文件中的大多数文字内容。以下选项中可以使用`no<选项名称>`禁用该选项设定，比如`nosubstesc`。
 
 - `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](./内容变量.md)）
-    - 当该选项在`[/subst_string]`或`[/subst_regex]`语句后指定，会应用在匹配内容上
     - 当该选项在`[/entry]`语句后指定，会应用在路径名称上
 - `substesc`：将内容中的`{{ESC}}`替换为终端ESC（ASCII Escape）字符（`\x1b`）
     - **该选项仅适用于这些地方：**`header`段落中的`description`定义；`substrules`段落中的匹配和替换内容；`entries`中的字符串定义内容
-    - 当该选项在`[/subst_string]`或`[/subst_regex]`语句后指定，会应用在匹配内容上
 - `substchar`：使用字符编码输入特殊字符；支持`{{[xXX]}}`、`{{uXXXX}}`、和`{{UXXXXXXXX}}`格式（和Python字符串相似）
     - 该选项仅适用于支持`substesc`的地方
 - `linebounds`：支持在部分内容中指定行边界，以在开端和末尾中插入空格。如需使用，请启用该选项并在对应的内容的开头和末尾添加`|`字符。
@@ -93,6 +91,31 @@ set_options linebounds
 
 ### 命令行输出替换
 
+以下几个选项仅适用于`[subst_string]`和`[subst_regex]`语法：
+- ~~`subststdoutonly`：仅匹配standard output的输出内容~~
+- ~~`subststderronly`：仅匹配standard error的输出内容~~
+- ~~`substallstreams`：**默认设定；用于重置之前设定**；匹配所有内容~~
+- `endmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续应用其他的匹配规则
+    - **注意：** 该选项仅适用于匹配规则所在文件中的其他规则，其他文件中的规则将不受影响
+    - 使用`noendmatchhere`以取消设定
+- `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
+    - 使用`noforegroundonly`以取消设定该选项
+    - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
+    - 你也可以在命令限制条件中指定该选项（如`[/filter_commands] foregroundonly`），以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
+    - **注意：** 经测试，只有shell等应用程序会在执行其他命令时修改自己的前台状态；`sudo`等程序不会（除非通过`sudo`执行shell，如`sudo bash`）。
+    - **注意：** 大多数shell程序（`bash`、`zsh`、`csh`）的命令执行错误提示（如`command not found`、`permission denied`等）会通过创建的另一个进程输出，并且shell会在后台运行。这会导致带有该选项的命令限制规则和对应的替换规则在这些提示输出上不会被应用：
+
+```plaintext
+$ clitheme-exec --foreground-stat bash
+bash-3.2$ wef
+! Foreground: False
+bash: wef: command not found
+! Foreground: True
+bash-3.2$
+```
+
+### 命令限制规则
+
 以下几个选项仅适用于`filter_command`或`[filter_commands]`语法：
 - `strictcmdmatch`：用户输入的命令内容必须匹配命令匹配条件的开始（和默认的匹配参数不同）；比如说用户输入的`command --get-operation thing`在这个模式下会匹配到`command --get-operation thing --another`，但是不会匹配到`command --another thing --get-operation`
 - `exactcmdmatch`：用户输入的命令必须与匹配条件完全相同；比如说用户输入的`command --get-operations --strict`会匹配到`command --get-operations --strict`，但是不会匹配到`command --get-operations`
@@ -101,15 +124,3 @@ set_options linebounds
     - 单个`-`之后的字符（无论字母和数字）都会被这样处理
     - 起始与多个横杠的语句（`--`）将不会被这样处理
 - `normalcmdmatch`：**默认设定；用于重置之前设定**；用户输入的命令中的语句需要包含匹配条件中的语句（e.g. `example-app --this --that`会匹配`example-app --that`匹配条件）
-- `foregroundonly`：仅在进程为前台运行时应用这些替换规则。该选项适用于使用`clitheme-exec`执行shell等应用程序：通过大多数shell执行其他命令时，该shell会切换为后台运行（并且将执行的命令切换为前台）。这个选项可以防止输出误替换的问题，并且可以确保仅在shell的提示信息上应用有关的的替换规则。
-    - 使用`noforegroundonly`以取消设定该选项
-    - 你可以使用`clitheme-exec --foreground-stat`以在前台状态切换时获得提示信息
-    - 你也可以在限制条件中指定该选项，以应用于适用的替换规则。当取消设定或者重新设定新的限制条件时，该选项将会还原到之前的设定，**即使中途更改了该选项的设定**。
----
-以下几个选项仅适用于`[subst_string]`和`[subst_regex]`语法：
-- ~~`subststdoutonly`：仅匹配standard output的输出内容~~
-- ~~`subststderronly`：仅匹配standard error的输出内容~~
-- ~~`substallstreams`：**默认设定；用于重置之前设定**；匹配所有内容~~
-- `endmatchhere`，`noendmatchhere`：当遇到带有该选项的匹配规则并且与当前输出内容成功匹配时，不再继续应用其他的匹配规则
-    - **注意：** 该选项仅适用于匹配规则所在文件中的其他规则，其他文件中的规则将不受影响
-    - 使用`noendmatchhere`以取消设定
