Add regex command filter description

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -139,21 +139,30 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ## 限制匹配规则适用的命令
 
-为了防止一个匹配规则在另一个无关的应用程序被应用，你可以为匹配规则限制适用的命令。如需添加命令限制，请在匹配规则前面添加`[filter_commands]`段落。
+为了防止一个匹配规则在另一个无关的应用程序被应用，你可以为匹配规则限制适用的命令。
 
 ```plaintext
 {substrules_section}
-    [filter_commands]
+    [filter_cmds]
         <命令或由多行分开的多个命令>
-    [/filter_commands]
+    [/filter_cmds]
     # 你也可以使用以下语法：
-    filter_command <命令>
+    filter_cmd <命令>
+    # 正则表达式
+    [filter_cmds_regex]
+        <正则表达式>
+    [/filter_cmds_regex]
+    # 你也可以使用以下语法：
+    filter_cmd_regex <命令>
+
     # 该限制会对以下的规则生效
     [subst_regex]
         <...>
     [/subst_regex]
+
     # 使用以下语句对之后的规则取消设定限制
-    unset_filter_command
+    unset_filter_cmd
+
     # 以下的规则不会受到限制
     [subst_regex]
         <...>
@@ -161,11 +170,24 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {/substrules_section}
 ```
 
-- 在`[filter_commands]`中输入命令以设定限制。定义后，之后定义的匹配规则仅会对这些命令生效。
+- 在`[filter_cmds]`中输入命令以设定限制。定义后，之后定义的匹配规则仅会对这些命令生效。
     - 你可以同时指定多个命令；只需要通过换行分开就可以了
     - 你可以指定带有选项的命令（如`rm -r -f`和`example-app do-something -e`）
-- 你也可以使用`filter_command <命令>`来指定单个命令；这样输入起来会更便捷
-- 使用`unset_filter_command`来取消设定限制。设定后，之后定义的匹配规则不会拥有命令限制。
+- 你也可以使用`filter_cmd <命令>`来指定单个命令；这样输入起来会更便捷
+- 使用`unset_filter_cmd`来取消设定限制。设定后，之后定义的匹配规则不会拥有命令限制。
+
+**注意：** 在非正则表达式命令规则中，如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
+
+- 你也可以使用`[filter_cmds_regex]`通过正则表达式匹配命令。检查时，会从命令的开头匹配（会在表达式前加上`^`符号）。
+    - 你可以通过以下写法模拟对程序名称的匹配：
+
+```plaintext
+setvar:path ([^\s]*[\\/])?
+setvar:ext (\.exe|\.com|\.ps1|\.bat)?
+[filter_cmds_regex]
+    {{path}}<程序名称>{{ext}} <...>
+[/filter_cmds_regex] substvar
+```
 
 ### 命令匹配机制&选项
 
@@ -174,8 +196,6 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 比如说，用户输入的`rm something -rf`指令会匹配限制条件中的`rm -rf`规则，但不会匹配到`something -rf rm`（因为第一个语句不同）和`rm -f`（因为原命令中不包括`-f`）。
 
 你可以选择[其他的匹配机制和选项](../附录：主题定义文件通用语法/可以设定的选项.md#命令限制规则)；只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`加上它们，以把它应用到之后所有的命令限制规则定义。请注意，`filter_command <命令>`语法只能通过`set_options`设定这些选项。
-
-**注意：** 在非正则表达式命令规则中，如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`，`python3 test.py`也会被尝试匹配。
 
 #### 样例：
 
