--- a/附录：主题定义文件通用语法/指定最低支持的版本.md
+++ b/附录：主题定义文件通用语法/指定最低支持的版本.md
@@ -10,11 +10,7 @@
 
 ## 可以指定的版本格式
 
-你可以在`!require_version`中指定`2.0`及以上的版本，并且可以指定如`a.b`格式的发行版次。你还可以指定带有`-betaN`后缀的beta版本。完整支持的版本格式如下：（括号代表可选信息）
+你可以在`!require_version`中指定`2.0`及以上的版本，并且可以指定如`a.b`格式的发行版次。你还可以指定带有`-betaN`后缀的beta版本。完整支持的版本格式为：`a.b-betaN`
 
-```plaintext
-a.b[-betaN]
-```
-
-**注意：** 不支持带有bugfix版本信息的版本格式（`a.b.X`）。
+**注意：** 不支持带有bugfix版本信息的版本格式（比如`2.0p1`）。
 **注意：** 不支持指定带有`-devYYYYMMDD`后缀的版本号。你可以使用最新的beta版本号码代替。
