Fix typo in `substchar` description

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -75,7 +75,7 @@
     - 当该选项在`[/entry]`语句后指定，会应用在路径名称上
 - `substesc`：将内容中的`{{ESC}}`替换为终端ESC（ASCII Escape）字符（`\x1b`）
     - **该选项仅适用于这些地方：**`header`段落中的`description`定义；`substrules`段落中的匹配和替换内容；`entries`中的字符串定义内容
-- `substchar`：使用字符编码输入特殊字符；支持`{{[xXX]}}`、`{{uXXXX}}`、和`{{UXXXXXXXX}}`格式（和Python字符串相似）
+- `substchar`：使用字符编码输入特殊字符；支持`{{[xXX]}}`、`{{[uXXXX]}}`、和`{{[UXXXXXXXX]}}`格式（和Python字符串相似）
     - 该选项仅适用于支持`substesc`的地方
 - `linebounds`：支持在部分内容中指定行边界，以在开端和末尾中插入空格。如需使用，请启用该选项并在对应的内容的开头和末尾添加`|`字符。
     - 该选项启用后，所有以`|`字符开头的内容必须在末尾插入相同字符，否则会提示语法错误
