Add note to `linebounds` description

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -79,6 +79,7 @@
     - 该选项仅适用于支持`substesc`的地方
 - `linebounds`：支持在部分内容中指定行边界，以在开端和末尾中插入空格。如需使用，请启用该选项并在对应的内容的开头和末尾添加`|`字符。
     - 该选项启用后，所有以`|`字符开头的内容必须在末尾插入相同字符，否则会提示语法错误
+    - **部分地方（如`[entry]`和`in_subsection`后的路径、文件路径、语言定义等）即使使用行边界，依然不会保留首末空格**
 
 ```plaintext
 set_options linebounds
