--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -20,7 +20,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 替换规则分为两种：**字符串替换**和**正则表达式**替换。前者会匹配完全相同的输出文本和字符，后者会根据正则表达式中的规则匹配输出文本。
 
-**请注意：**目前仅支持匹配单行的输出，不支持匹配多行输出（这意味着**不要在匹配正则表达式中使用`\n`等换行符号**）。不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容。
+**请注意：** 现在，**所有替换规则会在包含多行输出的段落上应用**。所以，正则表达式中的`\s*`等定义可能会匹配并替换多行内容。你可以使用如`[\x20\t]*`等定义以确保仅匹配单行内容。
 
 ### 字符串和正则表达式替换：`subst_string`和`subst_regex`
 
@@ -58,8 +58,10 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         - 更多信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
     - 替换内容可以是多行的；详见[多行内容段落](../附录：主题定义文件通用语法/多行内容段落.md)
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
-    - 注意：不能同时指定多个系统语言，但是支持在此语法中使用变量替换（`substvar`；详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)），如`locale:{{some_var}}`会把`{{some_var}}`替换成对应变量的内容，并且在变量的内容中可以通过空格指定多个系统语言。
-- **如果匹配的内容之间有任何终端控制字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色颜色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。如需引用ANSI Escape字符（`{{ESC}}`），请在前面添加`set_options substesc`（详见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)）并且在内容中使用`{{ESC}}`。**如需引用其他字符（如`\x08`、`\x07`等），你必须使用正则表达式替换（`[subst_regex]`）。**
+    - 注意：不能同时指定多个系统语言，但是支持在此语法中使用变量替换（需[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substvar`选项），如`locale:{{some_var}}`会把`{{some_var}}`替换成对应变量的内容，并且在变量的内容中可以通过空格指定多个系统语言。
+- **如果匹配的内容之间有任何终端控制字符或特殊字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。
+    - 如需引用ANSI Escape字符（`{{ESC}}`），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substesc`选项，并在内容中使用`{{ESC}}`。
+    - 如需引用其他字符（如`\x08`、`\x07`等），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substchar`选项，并在内容中使用如`{{[x08]}}`、`{{[x07]}}`等表达式
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
 ### 注意事项
@@ -144,13 +146,13 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 ```plaintext
 {substrules_section}
     [filter_cmds]
-        <命令或由多行分开的多个命令>
+        <由换行分开的多个命令>
     [/filter_cmds]
     # 你也可以使用以下语法：
     filter_cmd <命令>
     # 正则表达式
     [filter_cmds_regex]
-        <正则表达式>
+        <由换行分开的多个正则表达式>
     [/filter_cmds_regex]
     # 你也可以使用以下语法：
     filter_cmd_regex <命令>
@@ -178,16 +180,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 **注意：** 在非正则表达式命令规则中，如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
 
-- 你也可以使用`[filter_cmds_regex]`通过正则表达式匹配命令。检查时，会从命令的开头匹配（会在表达式前加上`^`符号）。
-    - 你可以通过以下写法模拟对程序名称的匹配：
-
-```plaintext
-setvar:path ([^\s]*[\\/])?
-setvar:ext (\.exe|\.com|\.ps1|\.bat)?
-[filter_cmds_regex]
-    {{path}}<程序名称>{{ext}} <...>
-[/filter_cmds_regex] substvar
-```
+- 你也可以使用`[filter_cmds_regex]`或`filter_cmd_regex`通过正则表达式匹配命令。检查时，会从命令的开头匹配（会在表达式前加上`^`符号）。
 
 ### 命令匹配机制&选项
 
