Rename to 多行文本段落

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -56,7 +56,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
         - 带有语言设定的定义会比带有`default`设定的定义有更高的优先级。`default`更像是一个fallback选项：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义。
         - 更多信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
-    - 替换内容可以是多行的；详见[多行内容段落](../附录：主题定义文件通用语法/多行内容段落.md)
+    - 替换内容可以是多行的；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md)
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
     - 注意：不能同时指定多个系统语言，但是支持在此语法中使用变量替换（需[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substvar`选项），如`locale:{{some_var}}`会把`{{some_var}}`替换成对应变量的内容，并且在变量的内容中可以通过空格指定多个系统语言。
 - **如果匹配的内容之间有任何终端控制字符或特殊字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。
