--- a/自定义manpage文档/1. 编写定义文件.md
+++ b/自定义manpage文档/1. 编写定义文件.md
@@ -29,7 +29,7 @@
 
 你可以使用`[file_content]`语法通过输入文件内容来定义文档手册。在`[file_content]`语句后面需要添加目标文件路径，比如`[file_content] man1 example-app.1`。
 
-在`[file_content]`中的文件内容会根据多行内容段落的机制处理。详见[多行内容段落](../附录：主题定义文件通用语法/多行内容段落.md)
+在`[file_content]`中的文件内容会根据多行文本段落的机制处理。详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md)
 
 你可以同时指定多个`[file_content]`语句，以在同一文件内容下覆盖多个文档文件。它们必须指定与相邻的`[file_content]`语句之后，**并且中间可以有空行或注释**。在其他内容后插入`[file_content]`语句会被视为文件内容，而不是语法定义。
 
