--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -25,7 +25,7 @@
     [/subst_string] noendmatchhere foregroundonly
     # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
     [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
-        # 如果想对以下内容设定选项，需要使用多行内容段落
+        # 如果想对以下内容设定选项，需要使用多行文本段落
         locale:zh_CN (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
         locale:default (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
     [/subst_regex]
@@ -38,14 +38,14 @@
 
 ## 选项定义
 
-### 多行内容段落缩进/空格设定
+### 多行文本段落缩进/空格设定
 
-以下几个设定仅适用于多行内容段落（`header`段落仅支持`[description]`段落）：
+以下几个设定仅适用于多行文本段落（`header`段落仅支持`[description]`段落）：
 
 以下设定中的`<n>`应该输入一个整数数字，并且选项名称与数值之间不能有空格。比如：`leadspaces:4`
 
-- `leadtabindents:<n>`：多行内容段落中为每一行的开始添加`<n>`个tab缩进
-- `leadspaces:<n>`：多行内容段落中为每一行的开始添加`<n>`个空格
+- `leadtabindents:<n>`：多行文本段落中为每一行的开始添加`<n>`个tab缩进
+- `leadspaces:<n>`：多行文本段落中为每一行的开始添加`<n>`个空格
 
 #### 样例：
 
