--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -28,7 +28,7 @@ LC_ALL=
 
 定义时建议添加`default`语言。如果该定义不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在该定义支持当前系统语言的情况下才会被调用。
 
-在多行内容段落段落下，你可以同时定义多个语言，省去重复复制粘贴内容的过程。
+在多行文本段落段落下，你可以同时定义多个语言，省去重复复制粘贴内容的过程。
 
 ```plaintext
 {entries_section}
@@ -37,7 +37,7 @@ LC_ALL=
         locale:default Your entry text here
         locale:en_US Your entry text here
         locale:zh_CN 你的定义文本
-        # 或者使用多行内容段落（可以同时定义多个语言）
+        # 或者使用多行文本段落（可以同时定义多个语言）
         [locale] default en_US
             Your entry text here
         [/locale]
