--- a/应用程序和字符串定义API/编写主题定义文件/多行内容段落.md
+++ b/应用程序和字符串定义API/编写主题定义文件/多行内容段落.md
@@ -1,8 +1,8 @@
-# 多行内容段落
+# 多行文本段落
 
-主题定义文件中的部分定义支持多行内容段落。它允许你在一个定义中包括拥有多个行数的字符串，或允许你定义带有空格的名称和项目。
+主题定义文件中的部分定义支持多行文本段落。它允许你在一个定义中包括拥有多个行数的字符串，或允许你定义带有空格的名称和项目。
 
-如需定义多行内容段落段落，请在支持的定义名称中添加`[`和`]`（比如：`[locales]`, `[description]`），并且使用`[/<name>]`结束段落（如`[/locales]`，`[/description]`。
+如需定义多行文本段落段落，请在支持的定义名称中添加`[`和`]`（比如：`[locales]`, `[description]`），并且使用`[/<name>]`结束段落（如`[/locales]`，`[/description]`。
 
 ## header段落
 
@@ -10,7 +10,7 @@
 
 ## entries段落
 
-在`entries`段落中，`entry`中的字符串定义（`locale`）支持多行内容段落，并且通过`[locale]`定义。
+在`entries`段落中，`entry`中的字符串定义（`locale`）支持多行文本段落，并且通过`[locale]`定义。
 
 **提示：** 你可以定义多个语言，省去重复复制粘贴的过程。多个语言由空格分开。
 
@@ -39,4 +39,4 @@ A new line
 
 ## 更多信息
 
-更多信息请见[附录：主题定义文件通用语法/多行内容段落](../../附录：主题定义文件通用语法/多行内容段落.md)。
+更多信息请见[附录：主题定义文件通用语法/多行文本段落](../../附录：主题定义文件通用语法/多行文本段落.md)。
