Update options mechanism documentation

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -74,9 +74,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ### 可以设定的选项
 
-你可以为匹配规则设定一些选项。如需设定，请在`[/subst_string]`或`[/subst_regex]`之后添加选项设定，或使用`set_options`为之后定义的匹配规则应用这些选项设定。
-
-请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)。
+你可以为匹配规则设定一些选项。详细请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)。
 
 ### 同时指定多个匹配表达式
 
@@ -105,10 +103,10 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     [/subst_string]
 
     # 错误语法（两者不能混用）：
-    [subst_string] Some text 1
-    [subst_regex] Some regex 1
-        locale:default Some substitution text
-    [/subst_string]
+    # [subst_string] Some text 1
+    # [subst_regex] Some regex 1
+    #     locale:default Some substitution text
+    # [/subst_string]
 {/substrules_section}
 ```
 
