--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -4,9 +4,9 @@
 
 ## 如何设定选项
 
-你可以使用`set_options <选项>`语法来设定选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在该语句之后的相关定义。比如：`set_options substesc substvar leadtabs:1`
+你可以使用`set_options <选项>`语法来设定选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在之后的所有相关定义。比如：`set_options substesc substvar leadtabs:1`
 
-你也可以对单个定义设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`set_options`设定的选项设置。比如说：`[/subst_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
+你也可以对单个段落设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`set_options`设定的选项设置。比如说：`[/subst_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
 
 ```plaintext
 {substrules_section}
@@ -34,13 +34,13 @@
 
 ### 全局定义和段落内定义的区别
 
-全局定义是指在段落外定义的选项设定；段落内定义的选项设定只会在该段落内有效。结束该段落后，当前的选项设定将会复原成现有的全局定义。
+全局定义是指在**section段落**外定义的选项设定；段落内定义的选项设定只会在该段落内有效。结束该section段落后，当前的选项设定将会复原成现有的全局定义。
 
 ## 选项定义
 
 ### 多行文本段落缩进/空格设定
 
-以下几个设定仅适用于多行文本段落（`header`段落仅支持`[description]`段落）：
+以下几个设定适用于多行文本段落（`header`段落仅支持`[description]`段落）：
 
 以下设定中的`<n>`应该输入一个整数数字，并且选项名称与数值之间不能有空格。比如：`leadspaces:4`
 
@@ -69,7 +69,7 @@
 
 ### 内容替换
 
-以下选项适用于定义文件中的大多数文字内容。以下选项中可以使用`no<选项名称>`禁用该选项设定，比如`nosubstesc`。
+以下选项适用于定义文件中的大多数文本内容和多行文本段落。以下选项中可以使用`no<选项名称>`禁用该选项设定，比如`nosubstesc`。
 
 - `substvar`：将内容中的变量名称引用替换成变量内容（详见[内容变量](./内容变量.md)）
     - 当该选项在`[/entry]`语句后指定，会应用在路径名称上
@@ -92,7 +92,7 @@ set_options linebounds
 
 ### 命令行输出替换
 
-以下几个选项仅适用于`[subst_string]`和`[subst_regex]`语法：
+以下几个选项仅适用于`[subst_string]`和`[subst_regex]`段落：
 - ~~`subststdoutonly`：仅匹配standard output的输出内容~~
 - ~~`subststderronly`：仅匹配standard error的输出内容~~
 - ~~`substallstreams`：**默认设定；用于重置之前设定**；匹配所有内容~~
@@ -117,7 +117,7 @@ bash-3.2$
 
 ### 命令限制规则
 
-以下几个选项仅适用于`filter_command`或`[filter_commands]`语法：
+以下几个选项仅适用于`filter_command`或`[filter_commands]`段落：
 - `strictcmdmatch`：用户输入的命令内容必须匹配命令匹配条件的开始（和默认的匹配参数不同）；比如说用户输入的`command --get-operation thing`在这个模式下会匹配到`command --get-operation thing --another`，但是不会匹配到`command --another thing --get-operation`
 - `exactcmdmatch`：用户输入的命令必须与匹配条件完全相同；比如说用户输入的`command --get-operations --strict`会匹配到`command --get-operations --strict`，但是不会匹配到`command --get-operations`
     - 带有此选项的命令匹配条件拥有最高的匹配规则执行优先级
