Refine wording in exec and man documentation

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -48,19 +48,19 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {/substrules_section}
 ```
 
-- 在`[subst_string]`之后输入要匹配/查找的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式。
+- 在`[subst_string]`之后输入要匹配/查找的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式
     - CLItheme用的是Python内置的的正则表达式引擎，所以你必须使用Python的正则表达式语法。有关更多信息，请见[本文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
-    - 你也可以使用`[substitute_string]`和`[substitute_regex]`语法
-- 使用以`[locale]`开头的内容段落输入要替换的内容
-    - 在`[locale]`之后可以定义系统语言（locale）：当前的系统语言设定符合这个定义时才会执行替换；如不需要限制系统语言，请使用`default`。
-        - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
-        - 带有语言设定的定义会比带有`default`设定的定义有更高的优先级。`default`更像是一个fallback选项：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义。
-        - 更多信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)
-    - 替换内容可以是多行的；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md)
-- 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容。这样子写起来会更便捷
-    - 注意：不能同时指定多个系统语言，但是支持在此语法中使用变量替换（需[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substvar`选项），如`locale:{{some_var}}`会把`{{some_var}}`替换成对应变量的内容，并且在变量的内容中可以通过空格指定多个系统语言。
-- **如果匹配的内容之间有任何终端控制字符或特殊字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）。
-    - 如需引用ANSI Escape字符（`{{ESC}}`），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substesc`选项，并在内容中使用`{{ESC}}`。
+- 在`[locale]`内容段落内输入要替换的内容；在`[locale]`语句之后定义系统语言（locale）：当前的系统语言符合时才会执行替换规则
+    - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
+    - 如不需要限制系统语言，请使用`default`：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义（更多信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)）
+    - 内容中每行开头的共同缩进会被忽略；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md#关于缩进和边缘空格的处理)
+- 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容
+    - 注意：不能用空格同时指定多个系统语言，但是支持在此语法中使用变量替换（需[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substvar`选项），如`locale:{{some_var}}`，并且在变量的内容中可以通过空格指定多个系统语言
+
+---
+
+- **如果匹配的内容之间有任何终端控制字符或特殊字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）
+    - 如需引用ANSI Escape字符（`{{ESC}}`），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substesc`选项，并在内容中使用`{{ESC}}`
     - 如需引用其他字符（如`\x08`、`\x07`等），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substchar`选项，并在内容中使用如`{{[x08]}}`、`{{[x07]}}`等表达式
 - 以`#`开头的行是注释；它们必须定义在新的一行上
 
@@ -74,41 +74,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 ### 可以设定的选项
 
-你可以为匹配规则设定一些选项。详细请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)。
-
-### 同时指定多个匹配表达式
-
-在替换内容基本相同的情况下，你可以为一个规则定义同时指定多个匹配表达式。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[subst_string]`或`[subst_regex]`语句。
-
-**注意：** 不能同时指定`[subst_string]`或`[subst_regex]`语句（两者不能在同一个规则定义中混用）
-
-样例：
-
-```plaintext
-{substrules_section}
-    [subst_string] Some text 1
-    [subst_string] Some another text
-    [subst_string] Some text 2
-        locale:default Some substitution text
-    [/subst_string]
-    # 上方定义等于以下定义：
-    [subst_string] Some text 1
-        locale:default Some substitution text
-    [/subst_string]
-    [subst_string] Some text 2
-        locale:default Some substitution text
-    [/subst_string]
-    [subst_string] Some another text
-        locale:default Some substitution text
-    [/subst_string]
-
-    # 错误语法（两者不能混用）：
-    # [subst_string] Some text 1
-    # [subst_regex] Some regex 1
-    #     locale:default Some substitution text
-    # [/subst_string]
-{/substrules_section}
-```
+你可以为匹配规则设定一些选项。详细请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
 
 ### 样例
 
@@ -134,6 +100,34 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         # 否则，会使用以下定义：
         locale:default (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
     [/subst_regex]
+{/substrules_section}
+```
+
+### 同时指定多个匹配表达式
+
+在替换内容基本相同的情况下，你可以为一个规则定义同时指定多个匹配表达式。该功能可以免去对替换内容和定义段落的重复复制粘贴，并且修改替换内容会简单很多。如需使用，请同时指定多个`[subst_string]`或`[subst_regex]`语句。
+
+**注意：** 不能同时指定`[subst_string]`或`[subst_regex]`语句（两者不能在同一个规则定义中混用）
+
+```plaintext
+{substrules_section}
+    [subst_string] Some text 1
+    [subst_string] Some another text
+        locale:default Some substitution text
+    [/subst_string]
+    # 上方定义等于以下定义：
+    [subst_string] Some text 1
+        locale:default Some substitution text
+    [/subst_string]
+    [subst_string] Some another text
+        locale:default Some substitution text
+    [/subst_string]
+
+    # 错误语法（两者不能混用）：
+    # [subst_string] Some text 1
+    # [subst_regex] Some regex 1
+    #     locale:default Some substitution text
+    # [/subst_string]
 {/substrules_section}
 ```
 
@@ -174,11 +168,11 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     - 你可以同时指定多个命令；只需要通过换行分开就可以了
     - 你可以指定带有选项的命令（如`rm -r -f`和`example-app do-something -e`）
 - 你也可以使用`filter_cmd <命令>`来指定单个命令；这样输入起来会更便捷
+- 你也可以使用`[filter_cmds_regex]`或`filter_cmd_regex`通过正则表达式匹配命令。检查时会尝试匹配命令的开头（会在表达式前加上`^`符号）。
 - 使用`unset_filter_cmd`来取消设定限制。设定后，之后定义的匹配规则不会拥有命令限制。
 
-**注意：** 在非正则表达式命令规则中，如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
+**注意：** 如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
 
-- 你也可以使用`[filter_cmds_regex]`或`filter_cmd_regex`通过正则表达式匹配命令。检查时，会从命令的开头匹配（会在表达式前加上`^`符号）。
 
 ### 命令匹配机制&选项
 
