--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -20,8 +20,6 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 替换规则分为两种：**字符串替换**和**正则表达式**替换。前者会匹配完全相同的输出文本和字符，后者会根据正则表达式中的规则匹配输出文本。
 
-**请注意：** 现在，**所有替换规则会在包含多行输出的段落上应用**。所以，正则表达式中的`\s*`等定义可能会匹配并替换多行内容。你可以使用如`[\x20\t]*`等定义以确保仅匹配单行内容。
-
 ### 字符串和正则表达式替换：`subst_string`和`subst_regex`
 
 定义字符串规则的语法如下：
@@ -31,6 +29,10 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     # 把"{{ESC}}"替换为ANSI Escape字符：
     set_options substesc
     [subst_string] <匹配文本内容>
+    # 或者：
+    [subst_string>>
+        <多行匹配文本>
+    <<subst_string]
         [locale] <default或其他系统语言（locale）>
             <替换文本内容>
         [/locale]
@@ -39,6 +41,10 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     [/subst_string]
 
     [subst_regex] <匹配正则表达式>
+    # 或者：
+    [subst_regex>>
+        <多行匹配表达式>
+    <<subst_regex]
         [locale] <default或其他系统语言（locale）>
             <替换内容（正则表达式替换语法）>
         [/locale]
@@ -48,12 +54,20 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {/substrules_section}
 ```
 
-- 在`[subst_string]`之后输入要匹配/查找的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式
-    - CLItheme用的是Python内置的的正则表达式引擎，所以你必须使用Python的正则表达式语法。有关更多信息，请见[本文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
+- **单行匹配**：在`[subst_string]`之后输入要匹配/查找的文本内容；在`[subst_regex]`之后输入要匹配的正则表达式
+    - 该规则仅能匹配单行输出。比如，`content(\r\n)content`等正则表达式不会匹配到任何内容；这类规则需使用多行匹配语法。
+- **多行匹配**：在`[subst_string>>`或`[subst_regex>>`段落内输入用于匹配多行输出的文本内容/正则表达式，由`<<subst_string]`或`<<subst_regex]`结束段落
+    - 如需匹配输出中的换行符号，建议把换行后的内容放在表达式的下一行上。**内容段落中的换行会匹配输出中不同类型的换行符**。
+    - 如需在正则表达式中使用`\r`、`\n`等换行符号，建议通过`clitheme-exec --showchars <命令>`命令核对程序实际输出中使用的换行符号。
+    - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md#关于缩进和边缘空格的处理)
+- CLItheme用的是Python内置的的正则表达式引擎，所以需使用Python的正则表达式语法。详细请见[本文章](https://docs.python.org/zh-cn/3/howto/regex.html)
+
+---
+
 - 在`[locale]`内容段落内输入要替换的内容；在`[locale]`语句之后定义系统语言（locale）：当前的系统语言符合时才会执行替换规则
     - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
     - 如不需要限制系统语言，请使用`default`：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义（更多信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)）
-    - 内容中每行开头的共同缩进会被忽略；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md#关于缩进和边缘空格的处理)
+    - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md#关于缩进和边缘空格的处理)
 - 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容
     - 注意：不能用空格同时指定多个系统语言，但是支持在此语法中使用变量替换（需[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substvar`选项），如`locale:{{some_var}}`，并且在变量的内容中可以通过空格指定多个系统语言
 
