--- a/附录：主题定义文件通用语法/多行文本段落.md
+++ b/附录：主题定义文件通用语法/多行文本段落.md
@@ -29,21 +29,19 @@
 
 ## 关于缩进和边缘空格的处理
 
-**注意：** 多行文本段落中的结尾空格将会被忽略。
+**注意：** 多行文本段落中的结尾空格将会被忽略。如需添加末尾空格，请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`linebounds`选项并在一行中使用边界符号（如`|line content    |`）。
 
-但是，起始空格和whitespace会被减去多行文本段落内容内的共同空格大小（tab符号将会被视为8个空格）。这意味着行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上一定大小的空格，你可以在结束语句之后添加`leadtabs:<n>`或`leadspaces:<n>`；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
+起始空格会被减去多行文本段落内容内的共同空格大小（tab符号将会被视为8个空格）。这意味着只有行数之间的缩进差距将会被保留。如果你想要在所有的行之前都加上一定大小的空格，你可以[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`leadtabs:<n>`或`leadspaces:<n>`选项；前者会添加`<n>`个缩进（Tab）符号，后者会添加`<n>`个空格。
 
-你也可以使用`set_options`来对之后定义的所有段落应用这些选项，如`set_options leadtabs:1`或`set_options leadspaces:4`。详细请见[可以设定的选项](./可以设定的选项.md)。
-
-这意味着：
+### 样例
 
 ```plaintext
 [entry] entry1
     [locale] default
         Text 1
-            Text 2
-                Text 3
-        Text 4
+        Text 2
+            Text 3
+                Text 4
     [/locale]
 [/entry]
 [entry] entry2
@@ -55,33 +53,15 @@
 [/entry]
 [entry] entry3
     [locale] default
-Text1
-Text2
+Text 1
+Text 2
+Text 3
     [/locale]
 [/entry]
 ```
 
 被读取时会返回以下内容：
 
-`entry1`：
-```plaintext
-Text 1
-    Text 2
-        Text 3
-Text 4
-```
-
-`entry2`：
-
-```plaintext
-	Text 1
-    Text 2
-        Text 3
-```
-
-`entry3`：
-
-```plaintext
-Text1
-Text2
-```
+| `entry1` | `entry2` | `entry3` |
+| --- | --- | --- |
+| <pre>Text 1<br>Text 2<br>    Text 3<br>        Text 4</pre> | <pre>    Text 1<br>    Text 2<br>        Text 3</pre> | <pre>Text 1<br>Text 2<br>Text 3</pre>
