Cross out stderr detection (not implemented)

--- a/命令行输出替换/2. 使用clitheme-exec.md
+++ b/命令行输出替换/2. 使用clitheme-exec.md
@@ -50,14 +50,14 @@ $ sudo clitheme-exec some-command
 
 - `--debug`：在每一行输出的前面加上标记。这个标记会包含输出是否为stdout或stderr、匹配规则有没有更改输出等信息。
     - 标记符号为`o`时，表示该输出为standard output（`stdout`）
-    - 标记符号为`e`时，表示该输出为standard error（`stderr`）
+    - ~~标记符号为`e`时，表示该输出为standard error（`stderr`）~~
     - 标记符号的背景颜色：
         - **白色**：表示该行为本次读取的输出段落的开头
         - **蓝色**：表示该行输出执行替换规则后被改变
         - **红色**：表示执行替换规则时超时，并且输出没有被替换
 - `--debug-newlines`：永远用新的一行显示所有输出（用于末尾没有换行的输出内容）
     - **该选项必须与`--debug`一起使用**
-- `--debug-color`：对每一行添加颜色标记：如果该行输出为stdout，则标记黄色；如果该行输出为stderr，则标记红色。
+- `--debug-color`：对每一行添加颜色标记：如果该行输出为stdout，则标记黄色。~~如果该行输出为stderr，则标记红色。~~
 - `--showchars`：用明文显示以下终端控制字符：
     - ASCII Escape（`{{ESC}}`）
     - Carriage换行（`\r`）
