--- a/命令行输出替换/3. 样例教程.md
+++ b/命令行输出替换/3. 样例教程.md
@@ -1,10 +1,10 @@
-# 一个简单的样例展示
+# 一个简单的教程
 
 本文章将展示命令行输出替换的一个样例，包含使用`clitheme-exec --showchars`获取所需的输出和为输出编写替换规则。
 
-浏览本文章前，请先阅读[编写定义文件](1.%20编写定义文件.md)和[使用clitheme-exec](2.%20使用clitheme-exec.md)。
+> 如需了解更多信息，请阅读[编写定义文件](1.%20编写定义文件.md)和[使用clitheme-exec](2.%20使用clitheme-exec.md)文档。
 
-> 本文章中的部分内容源自`kawaii-gcc`项目。项目地址：https://github.com/Bill-Haku/kawaii-gcc
+本文章中的部分内容源自`kawaii-gcc`项目。项目地址：https://github.com/Bill-Haku/kawaii-gcc
 
 ## 1. 获取应用程序的输出
 
@@ -13,6 +13,8 @@
 你可以使用`--debug`选项来在每一行输出前加上标记。~~这个标记会包含输出为stdout或stderr的信息（通过`o`和`e`表达）。~~
 
 注意：`--showchars`和任何debug选项必须放在`clang test.c`的前面，否则要执行的命令将会被认为`clang test.c --showchars`。
+
+> 如需了解更多信息，请阅读[使用clitheme-exec](2.%20使用clitheme-exec.md)文档。
 
 ```plaintext
 $ clitheme-exec --debug --showchars --nosubst clang test.c
@@ -46,27 +48,26 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ### 为输出编写正则表达式
 
-我们可以为这些输出编写正则表达式定义。如需了解正则表达式和Python的正则表达式语法（因为CLItheme用的是Python内置的正则表达式引擎），你可以参考[Python官方文档中的这篇文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
+我们可以为这些输出编写正则表达式**替换规则**。如需了解正则表达式和Python的正则表达式语法，你可以参考[Python官方文档中的这篇文章](https://docs.python.org/zh-cn/3/howto/regex.html)。
 
 为了防止不小心替换无关的内容输出，我们在这个样例中会从行的开头开始匹配内容（平时写匹配规则时不需要都这样子做），包括前面的文件和行数信息（如`test.c:1:1:`）。但是，这里不需要匹配行中的所有内容，所以无需考虑行结尾的无关内容。
 
-我们拿这行输出举例（**这篇文档中的`{{ESC}}`会在编写定义文件时被替换成ASCII Escape字符**）：
-
-```plaintext
-{{ESC}}[0m{{ESC}}[1mtest.c:4:3: {{ESC}}[0m{{ESC}}[0;1;35mwarning: {{ESC}}[0m{{ESC}}[1mincompatible pointer types assigning to 'char *' from 'int *' [-Wincompatible-pointer-types]{{ESC}}[0m\r\n
-# 原输出内容：
-test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int *' [-Wincompatible-pointer-types]
-```
-
-我们可以使用以下正则表达式来匹配从这行开头到"`[-Wincompatible-pointer-types]`"之前的内容：
-
-```plaintext
-(?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
-```
-
-这个表达式中包含了对Escape字符的匹配；这是必要的。否则，该表达式不会匹配到输出，从而无法替换内容。
-
-这个正则表达式中使用了命名组来区分内容中的每一部分。这是一个推荐的写法，因为引用起来会更加容易和错误率更少。
+> 我们拿这行输出举例（这篇文档中的`{{ESC}}`会在编写定义文件时被替换成ASCII Escape字符）：
+> 
+> ```plaintext
+> {{ESC}}[0m{{ESC}}[1mtest.c:4:3: {{ESC}}[0m{{ESC}}[0;1;35mwarning: {{ESC}}[0m{{ESC}}[1mincompatible pointer types assigning to 'char *' from 'int *' [-Wincompatible-pointer-types]{{ESC}}[0m\r\n
+> # 原输出内容：
+> test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int *' [-Wincompatible-pointer-types]
+> ```
+> 
+> 我们可以使用以下正则表达式来匹配从这行开头到`[-Wincompatible-pointer-types]`之前的内容：
+> 
+> ```plaintext
+> (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
+> ```
+> 
+> - 这个表达式中包含了对Escape字符的匹配；这是必要的。否则，该表达式不会匹配到输出，从而无法替换内容。
+> - 这个正则表达式中使用了命名组来区分内容中的每一部分。这是一个推荐的写法，因为引用起来会更加容易和错误率更少。
 
 写好匹配表达式后，我们可以继续写要替换成的内容了。这里要注意的是替换的内容也会根据正则表达式的相关语法处理一些特殊字符；你可以参考之前链接的那篇文章的内容。比如说，我们可以把上述提示输出替换成以下内容，实现对应用程序输出的自定义。
 
@@ -78,12 +79,12 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ### 编写匹配规则和定义文件
 
-我们现在可以把这些表达式放进一个定义文件和其中的匹配规则定义中了。根据上述讲的内容编写匹配规则和主题定义文件，包括另一行的输出（`unknown type name`那一行）：
+我们现在可以把这些替换规则放进一个定义文件中了。以下内容是根据上述的内容编写的主题定义文件，包括另一个提示输出（`unknown type name`那一行）：
 
 ```plaintext
-# 在header_section中定义一些关于该主题定义的基本信息；必须包括
+# 在header_section中定义一些关于该主题定义的基本信息（必须定义）
 {header_section}
-    # 这里建议至少包括name和description信息
+    # 需要至少包括name信息
     name clang样例主题
     [description]
         一个为clang打造的的样例主题，为了演示作用
@@ -94,26 +95,54 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
     # 设定"substesc"选项：内容中的"{{ESC}}"字样会被替换成ASCII Escape终端控制符号
     set_options substesc
     # 命令限制条件：以下的替换规则仅会在以下命令中被应用。建议设定这个条件，因为可以尽量防止不应该的输出替换。
-    [filter_commands]
+    [filter_cmds]
         clang
         clang++
-        gcc
-        g++
-    [/filter_commands]
-    [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
-        # 如果你想仅在系统语言设定为中文（zh_CN）时应用这个替换规则，你可以使用"locale:zh_CN"
-        # 使用"locale:default"时不会添加系统语言限制
-        locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
-    [/subst_regex]
-    [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
-        locale:default \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
-    [/subst_regex]
+    [/filter_cmds]
+        [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
+            # 如果你想仅在系统语言设定为中文（zh_CN）时应用这个替换规则，你可以使用"locale:zh_CN"
+            # 使用"locale:default"时不会添加系统语言限制
+            locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+        [/subst_regex]
+        [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
+            locale:default \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
+        [/subst_regex]
 {/substrules_section}
 ```
 
-## 3. 应用主题
+#### 内容变量
 
-在终端中执行`clitheme apply-theme <文件名>`以应用这些定义，并且运行`clitheme-exec clang test.c`以看到效果。如果之前的命令无法使用，你也可以使用`python3 -m clitheme`来执行CLItheme和`python3 -m clitheme.exec`来执行`clitheme-exec`。
+这时，你可能注意到这两个正则表达式都有相同的匹配内容（`prefix`命名组）。如果要写很多个类似的替换规则，复制相同的表达式会变得非常麻烦，并且很难一起修改。我们可以使用[内容变量](../附录：主题定义文件通用语法/内容变量.md)来解决这个问题。以下为使用内容变量后的定义：
+
+```plaintext
+{substrules_section}
+    set_options substesc
+    # 设定`substvar`选项启用内容变量功能
+    set_options substvar
+    [filter_cmds]
+        clang
+        clang++
+    [/filter_cmds]
+        # 定义`match_prefix`变量
+        setvar:match_prefix (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)
+
+        # 内容中的`{{match_prefix}}`引用会被替换成对应的`match_prefix`变量的内容
+        [subst_regex] {{match_prefix}}warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
+            locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+        [/subst_regex]
+        [subst_regex] {{match_prefix}}error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
+            locale:default \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
+        [/subst_regex]
+{/substrules_section}
+```
+
+> 如需了解更多语法定义和功能（多行匹配/替换内容、命令限制规则等），请阅读[编写定义文件](1.%20编写定义文件.md)文档。
+
+> 如需了解字符替换、行边界、和替换规则选项等功能，请阅读[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)文档。
+
+## 3. 使用定义文件
+
+在终端中执行`clitheme apply-theme <文件名>`以应用定义文件，并且运行`clitheme-exec clang test.c`以看到效果。你也可以使用`python3 -m clitheme`和`python3 -m clitheme.exec`命令。
 
 ```plaintext
 $ clitheme-exec clang test.c
