Revise clitheme-exec documentation

--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -28,7 +28,8 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {substrules_section}
     # 把"{{ESC}}"替换为ANSI Escape字符：
     set_options substesc
-    [subst_string] <匹配文本内容>
+
+    [subst_string] <单行匹配文本>
     # 或者：
     [subst_string>>
         <多行匹配文本>
@@ -40,10 +41,10 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         locale:<default或其他系统语言（locale）> <替换文本内容>
     [/subst_string]
 
-    [subst_regex] <匹配正则表达式>
+    [subst_regex] <单行匹配正则表达式>
     # 或者：
     [subst_regex>>
-        <多行匹配表达式>
+        <多行匹配正则表达式>
     <<subst_regex]
         [locale] <default或其他系统语言（locale）>
             <替换内容（正则表达式替换语法）>
@@ -76,19 +77,14 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 - **如果匹配的内容之间有任何终端控制字符或特殊字符，匹配内容中必须包括它。** 你可以使用`clitheme-exec --showchars`在终端输出中以绿色显示这些字符（详见[使用clitheme-exec](2.%20使用clitheme-exec.md)）
     - 如需引用ANSI Escape字符（`{{ESC}}`），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substesc`选项，并在内容中使用`{{ESC}}`
     - 如需引用其他字符（如`\x08`、`\x07`等），请[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substchar`选项，并在内容中使用如`{{[x08]}}`、`{{[x07]}}`等表达式
-- 以`#`开头的行是注释；它们必须定义在新的一行上
 
-### 注意事项
+> 更多选项和功能（如行边界、内容变量、仅匹配前台进程输出）请参考：[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
 
 - 主题定义文件中的匹配规则会根据文件中定义的顺序依次执行；如果设定了多个定义文件，则根据文件列表中的顺序处理文件
-    - **这意味着你可以通过多个替换规则来更改/替换一行的输出**
+    - **这意味着你可以通过多个替换规则来更改/替换一行的输出，但需要考虑之前规则替换的内容**
+- 如果匹配规则的匹配文本/表达式、命令限制条件、和stdout/stderr限制设定于之前的规则相同，将被视为重复规则，并且之前的规则会被删除
 - 如果执行替换规则的时间超过**0.4秒**，则会视为超时，并且会输出未处理过的内容
 - 不需要匹配一行中的所有内容；你可以仅匹配和替换一行中的部分内容
-- 如果匹配规则的匹配文本/表达式、命令限制条件、和stdout/stderr限制设定于之前的规则相同，将被视为重复规则，并且新的定义会覆盖旧的
-
-### 可以设定的选项
-
-你可以为匹配规则设定一些选项。详细请见[可以设定的选项](../附录：主题定义文件通用语法/可以设定的选项.md)
 
 ### 样例
 
@@ -156,6 +152,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     [/filter_cmds]
     # 你也可以使用以下语法：
     filter_cmd <命令>
+
     # 正则表达式
     [filter_cmds_regex]
         <由换行分开的多个正则表达式>
@@ -187,16 +184,13 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 
 **注意：** 如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
 
-
-### 命令匹配机制&选项
+### 命令匹配机制
 
 默认情况下，只要用户输入的命令的第一个语句与限制条件命令的相同，并且用户输入命令包含限制条件命令中所有语句，相应的匹配条件会生效。**这里的语句指的是用空格分开的词语。**
 
 比如说，用户输入的`rm something -rf`指令会匹配限制条件中的`rm -rf`规则，但不会匹配到`something -rf rm`（因为第一个语句不同）和`rm -f`（因为原命令中不包括`-f`）。
 
-你可以选择[其他的匹配机制和选项](../附录：主题定义文件通用语法/可以设定的选项.md#命令限制规则)；只需要在`[/filter_commands]`的后面加上它们就可以了（两者之间加个空格）。你也可以使用`set_options`加上它们，以把它应用到之后所有的命令限制规则定义。请注意，`filter_command <命令>`语法只能通过`set_options`设定这些选项。
-
-#### 样例：
+你也可以为限制规则[设定选项](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)选择[其他的匹配机制](../附录：主题定义文件通用语法/可以设定的选项.md#命令限制规则)，比如：
 
 ```plaintext
 [filter_commands]
@@ -208,7 +202,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 ```plaintext
 set_options strictcmdmatch
 filter_command example-app some-opt
-# 重置之前设定：
+# 为后续规则重置设定：
 set_options normalcmdmatch
 ```
 
