Update documentation for new syntax

--- a/命令行输出替换/0. 样例教程.md
+++ b/命令行输出替换/0. 样例教程.md
@@ -85,7 +85,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 # 在header_section中定义一些关于该主题定义的基本信息（必须定义）
 {header_section}
     # 需要至少包括name信息
-    name clang样例主题
+    name: clang样例主题
     [description]
         一个为clang打造的的样例主题，为了演示作用
     [/description]
@@ -93,19 +93,19 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 {substrules_section}
     # 设定"substesc"选项：内容中的"{{ESC}}"字样会被替换成ASCII Escape终端控制符号
-    set_options substesc
+    (set_options) substesc
     # 命令限制条件：以下的替换规则仅会在以下命令中被应用。建议设定这个条件，因为可以尽量防止不应该的输出替换。
     [filter_cmds]
         clang
         clang++
     [/filter_cmds]
         [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
-            # 如果你想仅在系统语言设定为中文（zh_CN）时应用这个替换规则，你可以使用"locale:zh_CN"
-            # 使用"locale:default"时不会添加系统语言限制
-            locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+            # 如果你想仅在系统语言设定为中文（zh_CN）时应用这个替换规则，你可以使用"locale[zh_CN]"
+            # 使用"locale[default]:"时不会添加系统语言限制
+            locale[default]: \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
         [/subst_regex]
         [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
-            locale:default \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
+            locale[default]: \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
         [/subst_regex]
 {/substrules_section}
 ```
@@ -116,22 +116,22 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ```plaintext
 {substrules_section}
-    set_options substesc
+    (set_options) substesc
     # 设定`substvar`选项启用内容变量功能
-    set_options substvar
+    (set_options) substvar
     [filter_cmds]
         clang
         clang++
     [/filter_cmds]
         # 定义`match_prefix`变量
-        setvar:match_prefix (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)
+        setvar[match_prefix]: (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)
 
         # 内容中的`{{match_prefix}}`引用会被替换成对应的`match_prefix`变量的内容
         [subst_regex] {{match_prefix}}warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
-            locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+            locale[default]: \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
         [/subst_regex]
         [subst_regex] {{match_prefix}}error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
-            locale:default \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
+            locale[default]: \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
         [/subst_regex]
 {/substrules_section}
 ```
