--- a/命令行输出替换/1. 编写定义文件.md
+++ b/命令行输出替换/1. 编写定义文件.md
@@ -1,6 +1,6 @@
 # 编写定义文件（命令行输出替换）
 
-CLItheme允许你通过替换规则和定义来自定义任何命令行应用程序的输出。本文章将介绍如何编写**主题定义文件**和这些替换规则。
+CLItheme允许你通过替换规则和定义来自定义任何命令行应用程序的输出。本文章将介绍如何编写[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)和这些替换规则。
 
 ## 编写`header`段落
 
@@ -27,7 +27,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 ```plaintext
 {substrules_section}
     # 把"{{ESC}}"替换为ANSI Escape字符：
-    set_options substesc
+    (set_options) substesc
 
     [subst_string] <单行匹配文本>
     # 或者：
@@ -38,7 +38,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
             <替换文本内容>
         [/locale]
         # 或者：
-        locale:<default或其他系统语言（locale）> <替换文本内容>
+        locale[<default或其他系统语言（locale）>]: <替换文本内容>
     [/subst_string]
 
     [subst_regex] <单行匹配正则表达式>
@@ -50,7 +50,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
             <替换内容（正则表达式替换语法）>
         [/locale]
         # 或者：
-        locale:<default或其他系统语言（locale）> <替换文本内容>
+        locale[<default或其他系统语言（locale）>]: <替换文本内容>
     [/subst_regex]
 {/substrules_section}
 ```
@@ -66,11 +66,11 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 ---
 
 - 在`[locale]`内容段落内输入要替换的内容；在`[locale]`语句之后定义系统语言（locale）：当前的系统语言符合时才会执行替换规则
-    - 你可以同时指定多个系统语言；只需要用空格分开就可以了（如`[locale] en_US zh_CN`）
+    - 你可以同时指定多个系统语言，如：`[locale] en_US zh_CN`
     - 如不需要限制系统语言，请使用`default`：如果没有任何匹配到的带有语言设定的内容定义时才会使用带有`default`的定义（更多信息请见[多语言支持](../附录：主题定义文件通用语法/多语言支持.md)）
     - 内容中的缩进会根据多行文本段落的机制处理；详见[多行文本段落](../附录：主题定义文件通用语法/多行文本段落.md#关于缩进和边缘空格的处理)
-- 如果替换的内容只有一行，你可以使用`locale:<系统语言>`并且在后面加上替换的内容
-    - 注意：不能用空格同时指定多个系统语言，但是支持在此语法中使用变量替换（需[启用](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)`substvar`选项），如`locale:{{some_var}}`，并且在变量的内容中可以通过空格指定多个系统语言
+- 如果替换的内容只有一行，你可以使用`locale[<系统语言>]:`并且在后面加上替换的内容
+    - 你可以同时指定多个系统语言，如`locale[en_US default]:`
 
 ---
 
@@ -91,7 +91,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 ```plaintext
 {substrules_section}
     # substesc和endmatchhere选项会对以下所有的匹配规则生效
-    set_options endmatchhere substesc
+    (set_options) endmatchhere substesc
     [subst_string] Some text
         [locale] default
             Some other text here
@@ -106,9 +106,9 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
     [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
         # 如果系统语言为zh_CN，会使用以下定义：
-        locale:zh_CN (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
+        locale[zh_CN]: (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
         # 否则，会使用以下定义：
-        locale:default (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
+        locale[default]: (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
     [/subst_regex]
 {/substrules_section}
 ```
@@ -123,20 +123,20 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 {substrules_section}
     [subst_string] Some text 1
     [subst_string] Some another text
-        locale:default Some substitution text
+        locale[default]: Some substitution text
     [/subst_string]
     # 上方定义等于以下定义：
     [subst_string] Some text 1
-        locale:default Some substitution text
+        locale[default]: Some substitution text
     [/subst_string]
     [subst_string] Some another text
-        locale:default Some substitution text
+        locale[default]: Some substitution text
     [/subst_string]
 
     # 错误语法（两者不能混用）：
     # [subst_string] Some text 1
     # [subst_regex] Some regex 1
-    #     locale:default Some substitution text
+    #     locale[default]: Some substitution text
     # [/subst_string]
 {/substrules_section}
 ```
@@ -151,14 +151,14 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
         <由换行分开的多个命令>
     [/filter_cmds]
     # 你也可以使用以下语法：
-    filter_cmd <命令>
+    <filter_cmd> <命令>
 
     # 正则表达式
     [filter_cmds_regex]
         <由换行分开的多个正则表达式>
     [/filter_cmds_regex]
     # 你也可以使用以下语法：
-    filter_cmd_regex <命令>
+    <filter_cmd_regex> <命令>
 
     # 该限制会对以下的规则生效
     [subst_regex]
@@ -166,7 +166,7 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
     [/subst_regex]
 
     # 使用以下语句对之后的规则取消设定限制
-    unset_filter_cmd
+    <unset_filter_cmd>
 
     # 以下的规则不会受到限制
     [subst_regex]
@@ -178,9 +178,9 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 - 在`[filter_cmds]`中输入命令以设定限制。定义后，之后定义的匹配规则仅会对这些命令生效。
     - 你可以同时指定多个命令；只需要通过换行分开就可以了
     - 你可以指定带有选项的命令（如`rm -r -f`和`example-app do-something -e`）
-- 你也可以使用`filter_cmd <命令>`来指定单个命令；这样输入起来会更便捷
-- 你也可以使用`[filter_cmds_regex]`或`filter_cmd_regex`通过正则表达式匹配命令。检查时会尝试匹配命令的开头（会在表达式前加上`^`符号）。
-- 使用`unset_filter_cmd`来取消设定限制。设定后，之后定义的匹配规则不会拥有命令限制。
+- 你也可以使用`<filter_cmd> <命令>`来指定单个命令；这样输入起来会更便捷
+- 你也可以使用`[filter_cmds_regex]`或`<filter_cmd_regex>`通过正则表达式匹配命令。检查时会尝试匹配命令的开头（会在表达式前加上`^`符号）。
+- 使用`<unset_filter_cmd>`来取消设定限制。设定后，之后定义的匹配规则不会拥有命令限制。
 
 **注意：** 如果用户输入的命令中第一个词语包含路径（指定可执行文件），CLItheme会检查并尝试匹配程序名称。比如说，如果用户输入了`/usr/bin/python3 test.py`或`python3.exe test.py`，`python3 test.py`也会被尝试匹配。
 
@@ -193,17 +193,17 @@ CLItheme允许你通过替换规则和定义来自定义任何命令行应用程
 你也可以为限制规则[设定选项](../附录：主题定义文件通用语法/可以设定的选项.md#如何设定选项)选择[其他的匹配机制](../附录：主题定义文件通用语法/可以设定的选项.md#命令限制规则)，比如：
 
 ```plaintext
-[filter_commands]
+[filter_cmds]
     example-app some-opt
     another-app some-arg
-[/filter_commands] strictcmdmatch
+[/filter_cmds] strictcmdmatch
 ```
 
 ```plaintext
-set_options strictcmdmatch
-filter_command example-app some-opt
+(set_options) strictcmdmatch
+<filter_cmd> example-app some-opt
 # 为后续规则重置设定：
-set_options normalcmdmatch
+(set_options) normalcmdmatch
 ```
 
 ## 应用主题（`clitheme apply-theme`）
