--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -4,14 +4,14 @@
 
 ## 如何设定选项
 
-你可以使用`set_options <选项>`语法来设定选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在之后的所有相关定义。比如：`set_options substesc substvar leadtabs:1`
+你可以使用`(set_options) <选项>`语法来设定选项。你可以同时指定多个选项设定；只需要使用空格分开即可。设定后，这些选项将会被应用在之后的所有相关定义。比如：`(set_options) substesc substvar leadtabs:1`
 
-你也可以对单个段落设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`set_options`设定的选项设置。比如说：`[/subst_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
+你也可以对单个段落设定这些选项；只需要在它们的结束语句之后添加这些选项设定就可以了。这些设定会覆盖之前通过`(set_options)`设定的选项设置。比如说：`[/subst_regex] subststdoutonly endmatchhere`或`[/locale] substesc substvar leadtabs:1`
 
 ```plaintext
 {substrules_section}
     # substesc和endmatchhere选项会对以下所有的匹配规则生效
-    set_options endmatchhere substesc
+    (set_options) endmatchhere substesc
     [subst_string] |Some text|
         [locale] default
             Some other text here
@@ -26,8 +26,8 @@
     # 上方定义的noendmatchhere会覆盖之前在set_options中定义的endmatchhere
     [subst_regex] Error at file number (?P<num>\d+): item (?P<name>.+) not found
         # 如果想对以下内容设定选项，需要使用多行文本段落
-        locale:zh_CN (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
-        locale:default (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
+        locale[zh_CN]: (ToT)/~~~ 在文件\g<num>发生错误：找不到项目"\g<name>"！(>﹏<)
+        locale[default]: (ToT)/~~~ Error at file number \g<num>! Could not find item "\g<name>"!
     [/subst_regex]
 {/substrules_section}
 ```
@@ -79,14 +79,14 @@
     - 该选项仅适用于支持`substesc`的地方
 - `linebounds`：支持在部分内容中指定行边界，以在开端和末尾中插入空格。如需使用，请启用该选项并在对应的内容的开头和末尾添加`|`字符。
     - 该选项启用后，所有以`|`字符开头的内容必须在末尾插入相同字符，否则会提示语法错误
-    - **部分地方（如`[entry]`和`in_subsection`后的路径、文件路径、语言定义等）即使使用行边界，依然不会保留首末空格**
+    - **部分地方（如`[entry]`和`<in_subsection>`后的路径、文件路径、语言定义等）即使使用行边界，依然不会保留首末空格**
 
 ```plaintext
-set_options linebounds
+(set_options) linebounds
 # 内容："Line content  "
 [subst_regex] |Line content  |
     # 内容："  Replace content|new content "
-    locale:default |  Replace content|new content |
+    locale[default]: |  Replace content|new content |
 [/subst_regex]
 ```
 
