--- a/附录：主题定义文件通用语法/多语言支持.md
+++ b/附录：主题定义文件通用语法/多语言支持.md
@@ -34,9 +34,9 @@ LC_ALL=
 {entries_section}
     # ...
     [entry] com.example example-app example-entry
-        locale:default Your entry text here
-        locale:en_US Your entry text here
-        locale:zh_CN 你的定义文本
+        locale[default]: Your entry text here
+        locale[en_US]: Your entry text here
+        locale[zh_CN]: 你的定义文本
         # 或者使用多行文本段落（可以同时定义多个语言）
         [locale] default en_US
             Your entry text here
@@ -49,8 +49,8 @@ LC_ALL=
 {substrules_section}
     # ...
     [subst_string] Some example output message
-        locale:default Output message! :)
-        locale:zh_CN 输出提示！o(≧v≦)o
+        locale[default]: Output message! :)
+        locale[zh_CN]: 输出提示！o(≧v≦)o
         # 同时定义default、C、和en_US语言
         [locale] default C en_US
             Output message! :)
