--- a/应用程序和字符串定义API/编写主题定义文件/基本用法.md
+++ b/应用程序和字符串定义API/编写主题定义文件/基本用法.md
@@ -1,65 +1,12 @@
 # 主题定义文件的基本语法
 
-本文章将会介绍如何为你喜爱的应用程序编写**主题定义文件**，以自定义它们的文本输出。
+本文章将会介绍如何为你喜爱的应用程序编写[主题定义文件](../../附录：主题定义文件通用语法/文件格式和语法.md)，以自定义它们的文本输出。
 
-**注意：** 虽然文章中的样例会使用tab缩进以提高易读性，但是该格式不是必须的，并且你的文件中可以不包括任何缩进。
+## 编写`header`段落
 
-## 文件扩展名
+你需要先定义该主题/文件的一些基本信息，包括名称、简介等。请见[header段落](../../附录：主题定义文件通用语法/header段落.md)
 
-虽然CLItheme在文件扩展名上没有要求，但是最好将文件的扩展名定义为`.clithemedef.txt`。这样子你可以更好的辨识文件，并且使用`.txt`会确保该文件会被系统使用正确的应用程序（如文本编辑器）打开。
-
-## 注释
-
-你可以使用`#`来标记注释。注释不会被处理或读取。比如：
-
-```plaintext
-# this is a comment
-```
-
-**注意：** 注释只能在新的一行上定义。请不要在行的末尾定义注释。
-
-```plaintext
-# 错误用法：
-{header_section} # Some comments here
-```
-
-## 定义基本信息
-
-为了确保使用命令行工具输出当前主题信息时能清晰的辨识到主题，请在文件中包括并定义一些基本信息。
-
-这些基本信息需要在`header`段落内被定义。如需创建`header`段落，请使用`{header_section}`开始段落和`{/header_section}`结束段落。
-
-```plaintext
-{header_section}
-    <...>
-{/header_section}
-```
-
-在`header`段落内可以定义以下信息。你仅需要定义`name`条目，但是建议定义以下所有的信息。
-
-- `name`：定义该主题的名称，如**example-app颜文字主题**。
-- `description`: 定义该主题的更多详细信息。
-- `version`：定义该主题的版本。比如说，如果你添加或修改了其中的内容，你可以通过这个信息来跟踪修改版本，如`1.0`。
-- `locales`：定义主题支持哪些语言。如果支持多个语言，请使用空格分开。比如：`en_US zh_CN`或`English Chinese`
-- `supported_apps`：定义主题支持的应用程序。如果支持多个应用程序，请使用空格分开。比如：`example-app example-app-2 another-example-app`
-
-### 样例
-
-下面将展示一个`header`段落样例：
-
-```plaintext
-{header_section}
-    name example-app颜文字主题
-    description 为example-app制作的一个可爱的颜文字主题
-    version 1.0
-    locales zh_CN en_US
-    supported_apps example-app example-app-2
-{/header_section}
-```
-
-## 编写字符串定义
-
-### 使用`entries`段落
+## 使用`entries`段落
 
 所有的字符串定义会被包括在`entries`段落中。请使用和`header`段落相同的格式定义`entries`段落：
 
@@ -67,15 +14,15 @@
         <...>
     {/entries_section}
 
-### 使用`entry`定义
+### 使用`[entry]`定义
 
 要定义一个字符串，请使用`entry`定义，并且包括该字符串的路径名称，如`[entry] com.example example-app text-one`。如需获取路径名称，请参考相关应用程序的帮助信息或文档。
 
-CLItheme的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale:<default|语言> <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
+CLItheme的核心设计理念之一是多语言支持，所以字符串本体需要在`locale`行中定义。`locale`行的格式为：`locale[<default|语言>]: <字符串>`。当前的系统语言会被自动获取，并且会使用对应的定义。
 
 `locale`中的语言必须是系统语言格式，如`zh_CN`和`en_US`。你可以在命令行中使用`locale`命令查看当前系统语言。（详见文章[多语言支持](../../附录：主题定义文件通用语法/多语言支持.md)）
 
-定义字符串时建议添加`default`语言（`locale:default <字符串>`）。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
+定义字符串时建议添加`default`语言（`locale[default]: <字符串>`）。如果该字符串不支持当前的系统语言，会使用`default`语言定义。如果`default`语言没有被定义，只会在字符串支持当前系统语言的情况下调用该字符串。
 
 如果你不需要为应用程序添加多语言支持，只定义`default`语言就可以了。
 
@@ -85,46 +32,48 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 {entries_section}
     # ...
     [entry] com.example example-app text-one
-        locale:default Some text
-        locale:en_US Some text
-        locale:zh_CN 一些文本
+        locale[default]: Some text
+        locale[en_US]: Some text
+        locale[zh_CN]: 一些文本
     [/entry]
 {/entries_section}
 ```
 
-### 使用`in_domainapp`和`in_subsection`
+> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../../附录：主题定义文件通用语法/可以设定的选项.md)
 
-你可以使用`in_domainapp`和`in_subsection`以节省文件中的代码量。被定义时，这个信息会自动被添加在所有的`entry`定义前，以`<domain> <app> <subsections> <path>`的格式处理。
+### 使用`<in_domainapp>`和`<in_subsection>`
 
-如需了解关于子路径的更多信息，请参考[**应用程序和字符串定义API/应用程序适配/路径名称和数据结构**](../../应用程序和字符串定义API/应用程序适配/1.%20路径名称和数据结构.md)。
+你可以使用`<in_domainapp>`和`<in_subsection>`以节省文件中的代码量。被定义时，这个信息会自动被添加在所有的`[entry]`定义前，以`<domain> <app> <subsections> <路径>`的格式处理。
 
-`in_domainapp`的格式为`in_domainapp <domain> <app>`，并且不能有多余的空格。`in_subsection`的格式为`in_subsection <subsection[s]>`，并且可以有多个subsection和空格。
+如需了解关于子路径的更多信息，请参考[**路径名称和数据结构**](../应用程序适配/1.%20路径名称和数据结构.md)。
 
-你可以使用`unset_domainapp`和`unset_subsection`以取消定义这些信息。
+`<in_domainapp>`的格式为`<in_domainapp> <domain> <app>`，并且只能指定两个名称。`<in_subsection>`的格式为`<in_subsection> <subsection[s]>`，并且可以有多个subsection。
 
-**注意：** 使用`in_domainapp`和`unset_domainapp`时会同时取消定义之前设定的`in_subsection`信息。
+你可以使用`<unset_domainapp>`和`<unset_subsection>`以取消定义这些信息。
+
+**注意：** 使用`<in_domainapp>`和`<unset_domainapp>`时会同时取消定义之前设定的`<in_subsection>`信息。
 
 ```plaintext
 {entries_section}
-    in_domainapp com.example example-app
+    <in_domainapp> com.example example-app
         # 和 com.example example-app entry-one 相同
         [entry] entry-one
-            locale:default Some text
+            locale[default]: Some text
         [/entry]
 
-        in_subsection subsection-one subsection-two
+        <in_subsection> subsection-one subsection-two
             # 和 com.example example-app subsection-one subsection-two entry-two 相同
             [entry] entry-two
-                locale:default Some text
+                locale[default]: Some text
             [/entry]
 
-        in_subsection subsection-three
+        <in_subsection> subsection-three
             # 和 com.example example-app subsection-three entry-three 相同
             [entry] entry-three
-                locale:default Some text
+                locale[default]: Some text
             [/entry]
     # 会同时取消定义subsection
-    unset_domainapp
+    <unset_domainapp>
 {/entries_section}
 ```
 
@@ -136,25 +85,17 @@ CLItheme的核心设计理念之一是多语言支持，所以字符串本体需
 {entries_section}
     [entry] entry-one
     [entry] another-entry
-    [entry] entry-three
-        locale:default Some string definition content
+        locale[default]: Some string definition content
     [/entry]
     # 上方定义等于以下定义：
     [entry] entry-one
-        locale:default Some string definition content
+        locale[default]: Some string definition content
     [/entry]
     [entry] another-entry
-        locale:default Some string definition content
-    [/entry]
-    [entry] entry-three
-        locale:default Some string definition content
+        locale[default]: Some string definition content
     [/entry]
 {/entries_section}
 ```
-
-### 样例
-
-如需样例，请参考本仓库中`example-clithemedef`文件夹下的文件。
 
 ## 编写字符串的一些注意事项
 
