--- a/简介.md
+++ b/简介.md
@@ -33,7 +33,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ```plaintext
 {header_section}
-    name clang样例主题
+    name: clang样例主题
     [description]
         一个为clang打造的的样例主题，为了演示作用
     [/description]
@@ -41,19 +41,19 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 {substrules_section}
     # 设定"substesc"选项：内容中的"{{ESC}}"字样会被替换成ASCII Escape终端控制符号
-    set_options substesc
-    [filter_commands]
+    (set_options) substesc
+    [filter_cmds]
         clang
         clang++
         gcc
         g++
-    [/filter_commands]
+    [/filter_cmds]
     # clang的输出包含用于设定字体颜色的终端控制字符：请使用"clitheme-exec --showchars clang test.c"以显示它们
     [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)warning: (?P<esc>({{ESC}}.*?m)*)incompatible pointer types assigning to '(?P<name1>.+)' from '(?P<name2>.+)'
-        locale:default \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
+        locale[default]: \g<prefix>杂鱼～: \g<esc>'\g<name1>'从不兼容的指针类型赋值为'\g<name2>',纯爱战神很生气！
     [/subst_regex]
     [subst_regex] (?P<prefix>^({{ESC}}.*?m)*(.+:\d+:\d+:) ({{ESC}}.*?m)*)error: (?P<esc>({{ESC}}.*?m)*)unknown type name '(?P<type>.+)'
-        locale:default \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
+        locale[default]: \g<prefix>笨蛋！: \g<esc>未知的类型名'\g<type>',是忘了定义了吗喵？
     [/subst_regex]
 {/substrules_section}
 ```
@@ -62,9 +62,7 @@ test.c:4:3: warning: incompatible pointer types assigning to 'char *' from 'int 
 
 ```plaintext
 $ clitheme apply-theme clang-theme_clithemedef.txt
-==> Processing files...
-Successfully processed files
-==> Applying theme...Success
+==> Successfully processed files
 Theme applied successfully
 ```
 
