--- a/自定义manpage文档/1. 编写定义文件.md
+++ b/自定义manpage文档/1. 编写定义文件.md
@@ -1,7 +1,6 @@
 # 主题定义文件中`manpage_section`
 
-本文章将介绍主题定义文件中的`manpage`段落语法。这个段落允许你添加自定义的Unix文档手册（`manpage`）
-文档，达到文档自定义的目的。使用CLItheme命令行工具应用主题定义文件后，你可以使用`clitheme-man`来查看这些手册文档。
+本文章将介绍[主题定义文件](../附录：主题定义文件通用语法/文件格式和语法.md)中的`manpage`段落语法。这个段落允许你添加自定义的Unix文档手册（`manpage`）文档，达到文档自定义的目的。
 
 有关Unix/Linux文档手册的更多信息，请见[本文章](https://www.man7.org/linux/man-pages/man1/man.1.html)。
 
@@ -54,22 +53,24 @@
 {/manpage_section}
 ```
 
-### 引用文件：`include_file`和`[include_file]`
+> 更多选项和功能（如行边界、内容变量）请参考：[可以设定的选项](../../附录：主题定义文件通用语法/可以设定的选项.md)
 
-你可以使用`include_file`语法来使用定义文件所在文件夹中的一个文件来作为文档手册的文件内容，并且在下一行中使用`as`语法来定义目标文件路径。你需要在两者后面加上文件路径：在`include_file`后根据**目标文件路径**语法添加引用文件的相对文件路径（根据**定义文件所在的文件夹/路径**计算，不是终端的PWD/当前路径位置），并且在`as`后添加目标文件路径。
+### 引用文件：`<include_file>`和`[include_file]`
+
+你可以使用`<include_file>`语法来使用定义文件所在文件夹中的一个文件来作为文档手册的文件内容，并且在下一行中使用`as:`语法来定义目标文件路径。在`<include_file>`后根据**目标文件路径**语法添加引用文件的相对文件路径（根据**定义文件所在的文件夹/路径**计算，不是终端的PWD/当前路径位置），并且在`as:`后添加目标文件路径。
 
 你也可以使用`[include_file]`段落来指定多个目标文件，以使用同一个源文件来覆盖多个文档。
 
 ```plaintext
 {manpage_section}
     # 如果主题定义文件的路径是"Documents/example-doc.clithemedef.txt"，那引用的文件会从"Documents/doc_manpages/example-app.1"读取
-    include_file doc_manpages example-app.1
-        as man1 example-app.1
+    <include_file> doc_manpages example-app.1
+        as: man1 example-app.1
     # 你也可以使用以下语法来覆盖多个目标文档文件
     [include_file] doc_manpages example-app.1
-        as man1 example-app.1
-        as man1 app-example.1
-        as man1 example.1
+        as: man1 example-app.1
+        as: man1 app-example.1
+        as: man1 example.1
     [/include_file]
 {/manpage_section}
 ```
