--- a/附录：主题定义文件通用语法/内容变量.md
+++ b/附录：主题定义文件通用语法/内容变量.md
@@ -4,17 +4,17 @@
 
 ## 定义变量
 
-你可以在段落之外或在段落内定义变量。如需定义变量，请使用`setvar:<变量名称> <内容>`语法。请注意，变量名称不能包含`(){}[]`中的任一字符，并且不能为`ESC`（因为会和`substesc`功能选项冲突）。
+你可以在段落之外或在段落内定义变量。如需定义变量，请使用`setvar[<变量名称>]: <内容>`语法。请注意，变量名称不能包含`(){}[]`中的任一字符，并且不能为`ESC`（因为会和`substesc`功能选项冲突）。
 
 ```plaintext
 {substrules_section}
-    setvar:example_var This is some example content
-    setvar:var2 Another example variable
+    setvar[example_var]: This is some example content
+    setvar[var2]: Another example variable
     # <...>
 {/substrules_section}
 # 你也可以在段落之外定义变量（全局定义）
-setvar:another_var Some variable content
-setvar:var3 Third variable!
+setvar[another_var]: Some variable content
+setvar[var3]: Third variable!
 ```
 
 ### 全局定义和段落内定义的区别
@@ -26,22 +26,22 @@ setvar:var3 Third variable!
 如需使用变量，请先设定`substvar`选项（使用`set_options substvar`），然后在内容中使用`{{<变量名称>}}`语法，比如`{{example_var}}`。样例：
 
 ```plaintext
-setvar:name Vim
-set_options substvar
+setvar[name]: Vim
+(set_options) substvar
 {header_section}
-    name {{name}} theme
-    version 9.1
-    description A simple theme for {{name}}
-    supported_apps {{name}}
+    name: {{name}} theme
+    version: 9.1
+    description: A simple theme for {{name}}
+    supported_apps: {{name}}
 {/header_section}
 ```
 
 需要注意的是，变量不能替代语法定义。这意味着你不能使用以下语法：
 
 ```plaintext
-set_options substvar
-setvar:place1 name
-setvar:place2 version
+(set_options) substvar
+setvar[place1]: name
+setvar[place2]: version
 {header_section}
     # 错误用法：
     {{place1}} Vim theme
@@ -62,12 +62,12 @@ setvar:place2 version
 你可以在变量的定义内容中通过上述方法引用另一个变量的内容。前提是：在定义变量之前设定`substvar`选项。样例：
 
 ```plaintext
-setvar:example_one Some text here
+setvar[example_one]: Some text here
 # 启用substvar之前，将不会替换变量名称
 # 内容：{{example_one}} with another text
-setvar:example_two {{example_one}} with another text
-set_options substvar
+setvar[example_two]: {{example_one}} with another text
+(set_options) substvar
 # 启用substvar之后将会替换变量名称
 # 内容：Some text here with another text
-setvar:example_three {{example_one}} with another text
+setvar[example_three]: {{example_one}} with another text
 ```
