Add `(enable_subst)` and `(disable_subst)` reference

--- a/附录：主题定义文件通用语法/可以设定的选项.md
+++ b/附录：主题定义文件通用语法/可以设定的选项.md
@@ -90,6 +90,15 @@
 [/subst_regex]
 ```
 
+> 你可以使用`(enable_subst)`语句一键启用以上所有的内容替换选项，并可以使用`(disable_subst)`语句一键禁用。
+> ```plaintext
+> # 相当于`set_options substvar substesc substchar linebounds`
+> (enable_subst)
+> setvar[var2]: |Some content {{var}} {{ESC}} {{[U00030edd]}}|
+> # 相当于`set_options nosubstvar nosubstesc nosubstchar nolinebounds`
+> (disable_subst)
+> ```
+
 ### 命令行输出替换
 
 以下几个选项仅适用于`[subst_string]`和`[subst_regex]`段落：
